--- a/settings.json
+++ b/settings.json
@@ -19,7 +19,7 @@
 	"ownername": "yudiganzz",
 	"botname":"yudiz Bot",
 	"img":"https://i.ibb.co/VpRWqYN/f1258b6a8cd8.jpg",
-	"thumb":"ali.jpg",
-	"fakethumb":"ali.jpg", 
+	"thumb":"IMG_20211001_074948_766-min.jpg",
+	"fakethumb":"IMG_20211001_074948_766-min.jpg", 
 	"fake": " 「  yudi  」\nCreated By @yudi14"
 }
